removed s on DPO

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         const finalDiffusionText = [
             "They Are The Future."
         ];
-        const achievementsText = "Brought To You By The Inventors Of Diffusion Models, Flash Attention, Decision Transformers, AlpacaLora, And Direct Preference Optimizations.";
+        const achievementsText = "Brought To You By The Inventors Of Diffusion Models, Flash Attention, Decision Transformers, AlpacaLora, And Direct Preference Optimization.";
 
         // Animation timing constants
         const typewriterDelay = 250;
