--- a/index.html
+++ b/index.html
@@ -138,6 +138,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HX11RSR827"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HX11RSR827');
+</script>
 <body>
     <div id="canvas-container">
         <canvas id="canvas"></canvas>
