--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             "Legacy language models",
             "(LLMs) generate one ",
             "token at a time. ",
-            "they are slow and unreliable."
+            "They are slow and unreliable."
         ];
         const initialDiffusionText = [
             "Inception's diffusion",
