new signup form

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
     <div id="final-text"></div>
     <div id="contact-info">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLScbksCEoHwaORlM-F6821vzkcP3ms3NzqnDLD2iOZtufDzfOQ/viewform?usp=sf_link" class="contact-link">Join the Beta Waitlist</a>
+        <a href="/signup.html" class="contact-link">Join the Beta Waitlist</a>
         <a href="https://jobs.gem.com/inception-ai" class="contact-link">Join the Team</a>
         <a href="http://34.72.22.63:8000/auth" class="contact-link">Access the Models</a>
     </div>
